# llm-screener

./: README.md  pyproject.toml
src/screener/: classify.py  cli.py  export.py  ingest.py
src/screener/io/: ris.py  xml_endnote.py
templates/: criteria.txt  system_prompt.txt  user_prompt.txt
tests/: test_pipeline.py
tests/fixtures/: sample.ris  sample.xml
