[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "screener"
version = "0.1.0"
description = "Systematic review screening pipeline: ingest → classify → export"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
screener = "screener.cli:main"

[tool.setuptools.packages.find]
where = ["src"]